Implemented and Documented Search APIs
